// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button tag Matches earlier configuration 1`] = `
<button
  className=""
/>
`;

exports[`Button tag Matches earlier configuration if alt prop is true 1`] = `
<button
  className=""
  disabled={true}
/>
`;

exports[`Button tag Matches earlier configuration if alternative is true 1`] = `
<button
  className=""
/>
`;

exports[`Button tag Matches earlier configuration ifu alternative is true 1`] = `
<button
  className=""
/>
`;
